<resources>
    <string name="app_name">Lab1</string>
    <string name="textview">中山大学学生信息系统</string>
    <string name="studentid">学号：</string>
    <string name="password">密码：</string>
    <string name="inputnum">请输入学号</string>
    <string name="inputpassword">请输入密码</string>
    <string name="teacher">教职工</string>
    <string name="student">学生</string>
    <string name="signin">注册</string>
    <string name="login">登录</string>
</resources>
