<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lab1.MainActivity">
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
     />
    <ImageView
        android:id="@+id/sysu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/sysu"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/studentid"
        app:layout_constraintTop_toBottomOf="@+id/sysu"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/inputnum"
        android:layout_marginEnd="20dp" />
    <TextView
        android:id="@+id/studentid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/studentid"
        app:layout_constraintRight_toLeftOf="@+id/number"
        app:layout_constraintTop_toTopOf="@+id/number"
        app:layout_constraintBottom_toBottomOf="@+id/number"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />
    <EditText
        android:id="@+id/passnum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/number"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/inputpassword"
        android:layout_marginEnd="20dp" />
    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passnum"
        app:layout_constraintBottom_toBottomOf="@+id/passnum"
        app:layout_constraintRight_toLeftOf="@+id/passnum"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />
    <RadioGroup
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passnum"
        android:layout_marginTop="20dp">
        <RadioButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/student"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"/>
    </RadioGroup>
    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button0"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:background="@drawable/button_style"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"/>
    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button0"
        android:background="@drawable/button_style"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/signin"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />
    <!--<Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button0"
        app:layout_constraintRight_toLeftOf="@+id/btn2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/button_style"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintHorizontal_chainStyle="packed"/>
    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button0"
        app:layout_constraintLeft_toRightOf="@id/btn1"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/button_style"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/signin"
        android:textSize="18sp"
        android:textColor="@color/white"
        />-->


    <!--<ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />-->

</android.support.constraint.ConstraintLayout>
